[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Dialogue/DialogueBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Dialogue/DialogueHandler.gd" type="Script" id=2]
[ext_resource path="res://Images/locations/forest.png" type="Texture" id=3]
[ext_resource path="res://Room Scripts/ForestRoom.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" parent="." instance=ExtResource( 1 )]

[node name="DialogueHandler" type="Node" parent="."]
script = ExtResource( 2 )
dialogue_path = "res://Dialogue Lines/forest.json"

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 80.0
margin_top = 30.0
margin_right = 1360.0
margin_bottom = 750.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animals" type="TextureButton" parent="TextureRect"]
margin_left = 120.0
margin_top = 380.0
margin_right = 360.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stumps" type="TextureButton" parent="TextureRect"]
margin_left = 510.0
margin_top = 350.0
margin_right = 850.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="soil" type="TextureButton" parent="TextureRect"]
margin_left = 1070.0
margin_top = 180.0
margin_right = 1280.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="TextureButton" parent="TextureRect"]
margin_left = 690.0
margin_top = 120.0
margin_right = 840.0
margin_bottom = 230.0

[node name="back" type="TextureButton" parent="TextureRect"]
margin_top = 630.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="ForestRoom" type="Node" parent="."]
script = ExtResource( 4 )
[connection signal="mouse_entered" from="TextureRect/animals" to="ForestRoom" method="_on_animals_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/animals" to="ForestRoom" method="_on_animals_mouse_exited"]
[connection signal="pressed" from="TextureRect/animals" to="ForestRoom" method="_on_animals_pressed"]
[connection signal="mouse_entered" from="TextureRect/stumps" to="ForestRoom" method="_on_stumps_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/stumps" to="ForestRoom" method="_on_stumps_mouse_exited"]
[connection signal="pressed" from="TextureRect/stumps" to="ForestRoom" method="_on_stumps_pressed"]
[connection signal="mouse_entered" from="TextureRect/soil" to="ForestRoom" method="_on_soil_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/soil" to="ForestRoom" method="_on_soil_mouse_exited"]
[connection signal="pressed" from="TextureRect/soil" to="ForestRoom" method="_on_soil_pressed"]
[connection signal="mouse_entered" from="TextureRect/next" to="ForestRoom" method="_on_next_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/next" to="ForestRoom" method="_on_next_mouse_exited"]
[connection signal="pressed" from="TextureRect/next" to="ForestRoom" method="_on_next_pressed"]
[connection signal="mouse_entered" from="TextureRect/back" to="ForestRoom" method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/back" to="ForestRoom" method="_on_back_mouse_exited"]
[connection signal="pressed" from="TextureRect/back" to="ForestRoom" method="_on_back_pressed"]
